# strava-ai

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  dockerfile
assets/: heatmap.css  heatmap.js  script.js  style.css
assets/themes/: dark_theme.css  light_theme.css
examples/: activity_streams_response.json
migrations/: 20260506130937_add_polyline_to_activity_table.sql  20260507114000_create_activity_streams.sql
src/: lib.rs  main.rs
src/controllers/: activity_details_template.rs  activity_feed_template.rs  activity_template.rs  ai_template.rs  ai_template_template.rs  callback_controller.rs  heatmap_template.rs  main_template.rs  mod.rs  settings_template.rs
src/libs/: mod.rs  ollama_client.rs  polyline.rs  rate_limit.rs  scheduler.rs  strava_client.rs
src/libs/models/: activity_stream.rs  athlete.rs  athlete_activity.rs  mod.rs  ollama.rs
src/libs/models/strava/: activity.rs  mod.rs  stream.rs  token.rs  update_activity.rs
src/libs/repository/: activity_repository.rs  activity_stream_repository.rs  athlete_repository.rs  db_pool.rs  mod.rs
templates/: activity_details_template.html  activity_feed_template.html  activity_template.html  ai_response_template.html  ai_template.html  athletes_template.html  heatmap_template.html  landing_page_template.html  main_template.html  settings_template.html
