[package]
name = "stravai_oxide"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
askama = { version = "0.15.4", features = ["serde_json"] }
axum = "0.8.8"
chrono = "0.4.44"
env_logger = "0.11.9"
log = "0.4.29"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate"] }
moka = { version = "0.12", features = ["future"] }
urlencoding = "2.1.3"
